--- a/pom.xml
+++ b/pom.xml
@@ -15,16 +15,24 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.oozie.extensions</groupId>
   <artifactId>oozie-el-extensions</artifactId>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.1.1</version>
   <name>Oozie Coordinator EL extensions</name>
   <url>https://github.com/shwethags/oozie-el-extensions</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <internal.maven.repository>http://build.corp.inmobi.com/nexus/content/repositories/releases</internal.maven.repository>
   </properties>
+    <distributionManagement>
+        <repository>
+            <id>internal.maven.repo</id>
+            <name>Internal Repository for Integration</name>
+            <url>${internal.maven.repository}</url>
+        </repository>
+    </distributionManagement>
   <repositories>
     <repository>
-      <id>internalRepo</id>
-      <url>http://build.corp.inmobi.com/nexus/content/repositories/releases</url>
+      <id>internal.repo</id>
+      <url>${internal.maven.repository}</url>
     </repository>
     <repository>
       <id>cdh.repo</id>
