--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.oozie.extensions</groupId>
   <artifactId>oozie-el-extensions</artifactId>
-  <version>0.1.1</version>
+  <version>0.1-SNAPSHOT</version>
   <name>Oozie Coordinator EL extensions</name>
   <url>https://github.com/shwethags/oozie-el-extensions</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <internal.maven.repository>http://build.corp.inmobi.com/nexus/content/repositories/releases</internal.maven.repository>
+    <internal.maven.repository>http://build.corp.inmobi.com/nexus/content/repositories/snapshots</internal.maven.repository>
   </properties>
     <distributionManagement>
         <repository>
@@ -50,9 +50,9 @@
       <version>0.20.2-cdh3u0</version>
     </dependency>
     <dependency>
-      <groupId>com.yahoo.oozie</groupId>
+      <groupId>org.apache.oozie</groupId>
       <artifactId>oozie-core</artifactId>
-      <version>3.0.2.1</version>
+      <version>3.1.3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.testng</groupId>
